Re-styles admin tabs and juggles classes to fix layout issue

--- a/sites/all/themes/doit/sass/neue-drupal/admin-tabs.sass
+++ b/sites/all/themes/doit/sass/neue-drupal/admin-tabs.sass
@@ -13,12 +13,13 @@ $bg-inv: invert($bg)
 
 // ADMIN TABS
 ul.tabs
-  padding: 0.7% 0
+  margin: 0.5em
+  padding: 0.5em 0
   width: 150px
   background: $bg
   position: absolute
-  top: 0.2%
-  right: 1%
+  top: 0
+  right: 0
   z-index: 1
   li
     display: block
@@ -31,7 +32,7 @@ ul.tabs
       background: $bg
       cursor: pointer
     a
-      font-size: 1.3em
+      font-size: 1em
       font-weight: 500
       text-decoration: none
       text-transform: uppercase
